# soma

./: .gitignore  README.md  mesh.py  pyproject.toml
cube3d/: colab_cube3d.ipynb  generate.py  vq_vae_encode_decode.py
cube3d/inference/: utils.py
cube3d/model/transformers/: cache.py  dual_stream_attention.py  roformer.py
soma/: __init__.py  generate.py
